paper: added package to compile eps figures in windows

--- a/doc/sanaPaper/sana.tex
+++ b/doc/sanaPaper/sana.tex
@@ -17,6 +17,8 @@
 \usepackage{algorithm}
 \usepackage[noend]{algpseudocode}
 \usepackage{float}
+\usepackage{epstopdf}
+\epstopdfsetup{update}
 %\usepackage{natbib}
 \newfloat{algorithm}{t}{lop}
 \makeatletter
