--- a/doc/sanaPaper/sana.tex
+++ b/doc/sanaPaper/sana.tex
@@ -402,6 +402,10 @@ Figure~\ref{fig:biogridgo} shows the biological quality of the alignments obtain
 HubAlign, with a time complexity of $O(n^2\log n)$ is the fastest method. Its execution time for the largest pair of networks, \textit{SCerevisiae} and \textit{HSapiens}, was 33 minutes. In the case of SANA and L-GRAAL the maximum running time is a parameter specified by the user, which we set to one hour. For the runs from the biological comparison (where $\beta=0.5$), which are the most important, SANA's runtime was limited to 1 hour. For the other runs, more time was used, but we suspect a better choice of parameters would recover similar results in less time. This is an area of further research.
 
 
+\subsection{Comparison with additional methods}
+In our main analysis we excluded many existing methods for brevity. In this section we mention briefly how SANA compares to them.
+
+
 \section{Discussion}
 
 If the past 10 years of network alignment have proven anything, it is that the choice of which objective function(s) is (are) most important is unclear. EC was superseded by S3 because it was noted that EC is too simplistic because it has no incentive to match density fluctuations in the two networks; S3 was designed to explicitly favor alignments that match density fluctuations across the networks.  In some sense, EC was important early on because initial EC scores were so low (in the single digits of percentages) that any increase in EC was seen as a good thing.  As EC became saturated, it became clear that it was too simplistic and S3 replaced it.
