paper references shared Bibloigraphy between all documents

--- a/doc/sanaPaper/sana.tex
+++ b/doc/sanaPaper/sana.tex
@@ -427,7 +427,7 @@ We are very grateful to Tijana Milenkovi\'{c} and Vikram Saraph for directions o
 \paragraph{Funding} The research has been supported by the Balsells fellowship.
 
 \bibliographystyle{natbib}
-\bibliography{Bibliography}
+\bibliography{../Bibliography}
 
 
 \end{document}
