paper: added reference to 2015 network alignment survey

--- a/doc/Bibliography.bib
+++ b/doc/Bibliography.bib
@@ -1,3 +1,16 @@
+@ARTICLE{survey2015, 
+author={Elmsallati, A. and Clark, C. and Kalita, J.}, 
+journal={Computational Biology and Bioinformatics, IEEE/ACM Transactions on}, 
+title={Global Alignment of Protein-Protein Interaction Networks: A Survey}, 
+year={2015}, 
+volume={PP}, 
+number={99}, 
+pages={1-1}, 
+keywords={Bioinformatics;Computational biology;IEEE transactions;Measurement;Proteins;Springs;Biological network;comparison;graph isomorphism;network alignment;protein-protein interaction;survey}, 
+doi={10.1109/TCBB.2015.2474391}, 
+ISSN={1545-5963}, 
+month={},}
+
 @article{optnetalign,
 author = {Clark, Connor and Kalita, Jugal}, 
 title = {A multiobjective memetic algorithm for PPI network alignment},
