--- a/doc/sanaPaper/sana.tex
+++ b/doc/sanaPaper/sana.tex
@@ -101,7 +101,7 @@ Topological knowledge can be extracted in many forms. For example, the wiring pa
 There are a wide variety of network alignment methods. This diversity is motivated by the inherent computational complexity of network alignment: topologically speaking, one would like to find an alignment that maximizes the number of preserved interactions, i.e., interactions between proteins that are mapped to proteins that also interact. However, this problem is \textit{NP-hard} because it is a generalization of \textit{subgraph isomorphism}, which is \textit{NP-complete}~\citep{Cook:1971:CTP:800157.805047}. This means that no efficient algorithm is known. Thus, practical methods must rely on approximation and heuristic techniques; and when it comes to heuristic algorithms, the possibilities are endless but there is no obvious ``best option''.
 
 % mention previous methods
-In the biological network domain, work over the past few years has included IsoRank~\citep{Isorank}, the family of GRAAL algorithms (GRAAL~\citep{GRAAL}, H-GRAAL~\citep{HGRAAL}, C-GRAAL~\citep{CGRAAL}, MI-GRAAL~\citep{MIGRAAL}, L-GRAAL~\citep{LGRAAL}), NATALIE~\citep{NATALIE}, GHOST~\citep{GHOST}, NETAL~\citep{NETAL}, SPINAL~\citep{SPINAL}, MAGNA~\citep{MAGNA}, HubAlign~\citep{HubAlign}, and OptNetalign~\citep{optnetalign}. 
+In the biological network domain, work over the past few years has included IsoRank~\citep{Isorank}, the family of GRAAL algorithms (GRAAL~\citep{GRAAL}, H-GRAAL~\citep{HGRAAL}, C-GRAAL~\citep{CGRAAL}, MI-GRAAL~\citep{MIGRAAL}, L-GRAAL~\citep{LGRAAL}), NATALIE~\citep{NATALIE}, GHOST~\citep{GHOST}, NETAL~\citep{NETAL}, SPINAL~\citep{SPINAL}, MAGNA~\citep{MAGNA} and its successor MAGNA++~\citep{MAGNApp},  HubAlign~\citep{HubAlign}, and OptNetalign~\citep{optnetalign}. \cite{survey2015} did a survey of existing methods, datasets, and optimization measures.
 
 % distinguish between obj functions and search algorithms
 % local vs global measures
