--- a/doc/sanaPaper/sana.tex
+++ b/doc/sanaPaper/sana.tex
@@ -200,7 +200,7 @@ Thus, in the absense of a starting alignment, SANA works in threes stages: (i) g
 
 A SANA iteration consists of updating the temperature, generating a neighbor alignment, evaluating it, and deciding whether to keep it. It is clear that all the steps other than evaluating the new alignment are constant time operations. Thus, the step that will determine the running time of each iteration is the alignment evaluation. Depending on the objective function, evaluating an alignment may require visiting every node in $G_1$ and $G_2$. However, between two neighbor alignments only one or two mappings are affected. In this section we show that for many typical objective functions, we can efficiently compute the score of the neighbor alignment incrementally from the score of the original alignment.
 
-\emph{\textbf{Edge Coverage\footnote{Sometimes called ``Edge Correctness'', although coverage is a better term because for most alignments no meaningful definition of ``correct'' exists.} (EC)}} is the fraction of edges in $G_1$ that are aligned to ({\it i.e.} cover) edges in $G_2$. Coverage represents interactions between proteins in one network that are mapped to proteins that also interact in the other. Let $E_a=\{(u_1,v_1)\in E_1\mid (a(u_1),a(v_1))\in E_2\}$ denote the set of edges in $G_1$ that cover edges in $G_2$ in alignment $a$. Then, the edge coverage of $a$ is $EC(a)={|E_a|}/{|E_1|}$. 
+\emph{\textbf{Edge Coverage\footnote{Often called ``Edge Correctness'', although coverage is a better term because for most alignments no meaningful definition of ``correct'' exists.} (EC)}} is the fraction of edges in $G_1$ that are aligned to ({\it i.e.} cover) edges in $G_2$. Coverage represents interactions between proteins in one network that are mapped to proteins that also interact in the other. Let $E_a=\{(u_1,v_1)\in E_1\mid (a(u_1),a(v_1))\in E_2\}$ denote the set of edges in $G_1$ that cover edges in $G_2$ in alignment $a$. Then, the edge coverage of $a$ is $EC(a)={|E_a|}/{|E_1|}$. 
 
 Evaluating whether an edge is covered requires constant time, so EC can be computed in time $O(|E_1|)$ by checking if each edge in $E_1$ belongs to $E_a$. In order to compute EC incrementally, we need to see how the set of covered edges changes between neighbor solutions. Assume that we know $E_a$ for some alignment $a$ and we need to know $E_{a'}$, where $a'$ is change neighbor of $a$. Let $u_1$ be the node in $G_1$ such that $a(u_1)\not= a'(u_1)$. Note that for any edge not incident to $u_1$, the image of its two endpoints has not changed, and thus whether it is covered by an edge in $G_2$ has not changed either. This means that we only need to check the edges incident to $u_1$. Therefore, the cost of computing $E_{a'}$ incrementally is $O(\mbox{degree}(u_1))$. The amortized cost of finding $E_{a'}$ for change neighbors is $O(|E_1|/|V_1|)$, the average degree of nodes in $G_1$. The case of swap neighbors is analogous, as we only need to consider the edges incident to the two swapped nodes. For sparse networks such as PPI networks, $|E_1|$ is typically within a small constant factor of $|V_1|$ (see table~\ref{networkTable}) so the practical amortized cost is constant.
 
@@ -213,7 +213,11 @@ $M_s(a)=\sum_{u\in V_1} s(u,a(u))/|V_1|$
 is the average similarity of the aligned proteins.
 We can compute the score difference of a local measure between neighbor alignments by subtracting the similarity of the node pairs that are no longer aligned and adding the similarity of the newly aligned pairs. If we assume that all the required similarities $s(u,v)$ are known before SANA starts, this requires constant time, as neighbor alignments only vary in one or two mappings.
 
-Any weighted combination of the aforementioned objective functions can also be computed efficiently by computing each one incrementally and then multiplying their scores by the corresponding factor to obtain the final score.
+\emph{\textbf{Weighted Edge Coverage (WEC)}}~\citep{WAVE} generalizes EC by making the contribution of each covered edge not equal, but a function of the similarity of the aligned endpoints. In order to define the similarity of the nodes, we can use any local measure $s$. Then, for each edge $(u_1,v_1)\in E_1$ covered by the alignment, its contribution is $\left(s(u_1,a(u_1))+s(v_1,a(v_1))\right)/2$. The WEC score is
+$$\frac{1}{|E_1|}\sum_{(u_1,v_1)\in E_a} \left(s(u_1,a(u_1))+s(v_1,a(v_1))\right)/2$$
+The WEC measure can be optimized incrementally by adapting the method used for EC to account for the weights.
+
+\emph{\textbf{Combinations}} Any weighted combination of the aforementioned objective functions can also be computed efficiently by computing each one incrementally and then multiplying their scores by the corresponding factor to obtain the final score.
 
 Incremental evaluation makes SANA scalable to very large PPI networks, as the cost of each step only depends on the average degree of nodes. SANA would not be suitable for objective functions that cannot be evaluated incrementally.
 
@@ -336,7 +340,7 @@ The objective function of SANA, HubAlign, and L-GRAAL is a combination of sequen
 where $T(a)$ and $S(a)$ are the topological and sequence similarity of an alignment $a$, respectively. For sequence similarity, we use normalized BLAST bit-scores~\citep{blast}. If $s(u_1,u_2)$ is the BLAST bit-score of proteins $u_1$ and $u_2$,
 $$S(a)=\sum_{u_1\in V_1} \frac{s(u_1,a(u_1))}{\mbox{max}_{v_1\in V_1,v_2\in V_2}s(v_1,v_2)}$$
 
-For the topological measure of SANA, we use one of the following: EC, S3, or the objective function of L-GRAAL~\citep{LGRAAL}. The latter is a weighted variation of edge coverage, where the contribution of each aligned interaction $(u,v)\in G_1$ is not constant: it is the sum of the graphlet similarity of $u$ and $a(u)$ and $v$ and $a(v)$. This way, aligning interactions with similar endpoints is favored.
+For the topological measure of SANA, we use one of the following: EC, S3, or the objective function of L-GRAAL, which is WEC with graphlet similarity as local measure~\citep{LGRAAL}.
 
 Our results suggest that L-GRAAL's objective function provides the best all-round measure of topology for alignment purposes. Moreover, using the same objective function as L-GRAAL illustrates how SANA is the key component in finding the best alignments when combined with any objective function. We denote the resulting method SANA-LG, whereas the variants in which the topological component of the objective function are S3 and EC are denoted SANA-S3 and SANA-EC, respectively.
 
@@ -367,7 +371,7 @@ In Figure~\ref{fig:lgraalobjfuncomparison} we compare L-GRAAL's alignment strate
 \begin{figure}
 \centering
 \includegraphics[width=0.99\linewidth]{lgraalobjfuncomparison_bw.eps}
-\caption{Comparison between L-GRAAL alignment strategy and SANA at optimizing L-GRAAL objective function: Weighted Edge Coverage (WEC) when using $\alpha=0$. A similar graph appears if we compare SANA-S3 to MAGNA (which optimizes S3).}
+\caption{Comparison between L-GRAAL alignment strategy and SANA at optimizing L-GRAAL objective function (graphlet-based WEC) when using $\alpha=0$. A similar graph appears if we compare SANA-S3 to MAGNA (which optimizes S3).}
 \label{fig:lgraalobjfuncomparison}
 \end{figure}
 
@@ -384,7 +388,7 @@ In Figure~\ref{fig:biogrid_beta0,5} we see the topological scores of the methods
 \begin{figure}
 \centering
 \includegraphics[width=0.99\linewidth]{biogrid_beta05_bw.eps}
-\caption{Scores of the three topological target measures, S3, EC, and LCCS, in addition to WEC and Sequence (SEQ), for the BioGRID dataset when setting $\beta=0.5$. The WEC plot compares L-GRAAL's and SANA-LG's common topological objective function (it is analogous to Figure~\ref{fig:lgraalobjfuncomparison} but with $\beta=0.5$). The other plots include HubAlign, L-GRAAL, and three variations of SANA (SANA-LG, SANA-EC, SANA-S3), although for some plots we only included the average of some of them to avoid cluttering. In the SEQ plot, we have added SANA-SEQ, which optimizes Sequence alone (i.e., $\alpha=1$), to give a notion of the upper-bound of Sequence scores for SANA.}
+\caption{Scores of the three topological target measures, S3, EC, and LCCS, in addition to graphlet-based WEC and Sequence (SEQ), for the BioGRID dataset when setting $\beta=0.5$. The WEC plot compares L-GRAAL's and SANA-LG's common topological objective function (it is analogous to Figure~\ref{fig:lgraalobjfuncomparison} but with $\beta=0.5$). The other plots include HubAlign, L-GRAAL, and three variations of SANA (SANA-LG, SANA-EC, SANA-S3), although for some plots we only included the average of some of them to avoid cluttering. In the SEQ plot, we have added SANA-SEQ, which optimizes Sequence alone (i.e., $\alpha=1$), to give a notion of the upper-bound of Sequence scores for SANA.}
 \label{fig:biogrid_beta0,5}
 \end{figure}
 
@@ -414,7 +418,7 @@ We believe LCCS suffers an analogous shortcoming.  When LCCS values were low in 
 
 It is clear that when SANA explicitly optimizes a particular objective function (EC, S3, or WEC), it does so better than any existing method. What is more interesting is that SANA-LG matches or beats all other methods in these measures while {\em simultaneously} doing significantly better in biological measures (SEQ and $GO_k$). This suggests that L-GRAAL's objective function, WEC, provides more biological significance than either EC or S3.
 
-We believe that, for now, WEC, which is based on graphlets, is the best topological measure. Five years ago \citep{GRAAL} it was shown that graphlets alone are capable of recovering significant biological information. SANA-LG's sequence scores (Figure~\ref{fig:biogrid_beta0,5}) and GO coverage (Figure~\ref{fig:biogridgo}) outperform all other methods, including SANA-EC and SANA-S3, while remaining competitive in all other topological measures against non-SANA competitors. Note that in one case (SC-HS), L-GRAAL anomalously achieves a much better WEC score than SANA-LG. We note, however, that L-GRAAL also obtains anomalously \textit{low} biological scores in that case, as can be seen in the SEQ plot. This one case also scored badly in GO terms (not depicted). After verifying we used the correct input parameters, we are not sure why L-GRAAL anomalously seems to have focused on topology at the expense of biology in this one case.
+We believe that, for now, WEC based on graphlets is the best topological measure. Five years ago \citep{GRAAL} it was shown that graphlets alone are capable of recovering significant biological information. SANA-LG's sequence scores (Figure~\ref{fig:biogrid_beta0,5}) and GO coverage (Figure~\ref{fig:biogridgo}) outperform all other methods, including SANA-EC and SANA-S3, while remaining competitive in all other topological measures against non-SANA competitors. Note that in one case (SC-HS), L-GRAAL anomalously achieves a much better WEC score than SANA-LG. We note, however, that L-GRAAL also obtains anomalously \textit{low} biological scores in that case, as can be seen in the SEQ plot. This one case also scored badly in GO terms (not depicted). After verifying we used the correct input parameters, we are not sure why L-GRAAL anomalously seems to have focused on topology at the expense of biology in this one case.
 
 While SANA-S3 grossly outperforms all other methods in optimizing S3, its sequence and GO scores are slightly lower than SANA-LG (although SANA-S3 still outperforms all non-SANA methods in sequence and GO measures). This suggests again that graphlets provide the most comprehensive topological information capable of recovering biological information.
 
