--- a/doc/sanaPaper/sana.tex
+++ b/doc/sanaPaper/sana.tex
@@ -147,13 +147,14 @@ If we take a random alignment, called the \textit{initial solution}, we can impr
 Let $G_1=(V_1,E_1)$ and $G_2=(V_2,E_2)$ be two graphs (networks) with $|V_1|\leq|V_2|$. An alignment $a$ from $G_1$ to $G_2$ is an injective function from $V_1$ to $V_2$. An objective function $f$ is a function from the set of all alignments to the closed range $[0,1]$.
 
 % algorithm
-The basic scheme of SANA is shown in Algorithm~\ref{alg:SANA}. The input consists of the two networks $G_1,G_2$, an objective function $f$, and a starting alignment (in the absence of one, SANA generates a random alignment). The last input $S$ provides a stopping condition, for example a maximum number of iterations, a maximum execution time, or some convergence criterion. Since SANA is a generic search algorithm, $f$ can be any objective function. The output is an alignment $a$ that aims to optimize $f$---in our case, we {\it maximize} various topological and biological similarity measures rather than minimizing energy.
+The basic scheme of SANA is shown in Algorithm~\ref{alg:SANA}. The input consists of the two networks $G_1,G_2$, an objective function $f$, and a starting alignment (in the absence of one, SANA generates a random alignment). The last input $S$ provides a stopping condition: a maximum number of iterations or execution time. Since SANA is a generic search algorithm, $f$ can be any objective function. The output is an alignment $a$ that aims to optimize $f$---in our case, we {\it maximize} various topological and biological similarity measures rather than minimizing energy.
 
 An important element of simulated annealing is the \textit{temperature schedule}, which determines the decline of the probability to accept a worse solution as the algorithm advances. The \textit{temperature} $T(i)$ is a control parameter which depends on the current iteration $i$. It is commonly defined as $T(i)=k\cdot e^{-\lambda\cdot i}$, where $k$ and $\lambda$ are empirically determined constants greater than zero~\citep{SA1}. The temperature is at its highest point at iteration 0 where $T(0)=k$, and approaches 0 asymptotically. The constant $\lambda$ determines how fast the temperature approaches 0.
 
-Figure~\ref{fig:operators} illustrates the neighbors of an alignment. We define two types, \textit{change} and \textit{swap} neighbors. Together, they allow SANA to explore the solution space completely: through a sequence of neighbors, it is possible to go from any alignment to any other alignment. %When generating a random neighbor, the probability of choosing each type of neighbor is proportional to its \textit{branching factor}, i.e., the number of different neighbors of $a$ of that type. This way, all neighbors are equally likely.
+Figure~\ref{fig:operators} illustrates the neighbors of an alignment. We define two types, \textit{change} and \textit{swap} neighbors. Together, they allow SANA to explore the solution space completely: through a sequence of neighbors, it is possible to go from any alignment to any other alignment. In SANA when a random neighbor is generated (line 3 of Algorithm~\ref{alg:SANA}) the probability of choosing each type of neighbor is proportional to its \textit{branching factor}, i.e., the number of different neighbors of $a$ of that type. This way, all neighbors are equally likely.
 
 In the algorithm, $\Delta E$ denotes the energy increment between the new and the current solution. The probability to accept a worse solution is $P(\Delta E, T(i)) = e^{\Delta E/T(i)}$. This probability decreases when the difference between $f(a)$ and $f(a')$ increases, and it also decreases as the temperature decreases.
+%We implement the fact that the neighbor is accepted with probability $P(\Delta E, T(i))$ by comparing this value with a uniformly distributed pseudorandom number in the range $(0,1)$ (represented by $\mbox{random}(0,1)$ in Algorithm~\ref{alg:SANA}) and only accepting the new solution if $P(\Delta E, T(i))$ is higher.
 
 \begin{algorithm}
 \caption{SANA}\label{alg:SANA}
@@ -165,7 +166,7 @@ In the algorithm, $\Delta E$ denotes the energy increment between the new and th
 \State $a'\gets \mbox{random neighbor(a)}$
 \State $\Delta E \gets f(a')-f(a)$
 \If {$\Delta E \geq 0$} $a\gets a'$
-\ElsIf {$P(\Delta E, T(i))>\mbox{random}(0,1)$} $a\gets a'$
+\Else \State $a\gets a'$ with probability $P(\Delta E, T(i))$
 \EndIf
 \State $i \gets i+1$
 \EndWhile
