paper: removed sentence saying that go_k is the best GO based measure

--- a/doc/sanaPaper/sana.tex
+++ b/doc/sanaPaper/sana.tex
@@ -286,7 +286,7 @@ Assuming there exists a correct alignment between $G_1$ and $G_2$, the {\it Node
 
 The \textit{common subgraph} of an alignment $a$ between $G_1$ and $G_2$ is the subgraph of $G_1$ that remains when considering only edges covered by the alignment: $CS_a=(V_1,E_a)$. A good alignment has a common subgraph with large connected regions. Let $CC_l=(V_l,E_l)$ be the largest connected component of $CS_a$. LCCS measures the size of $CC_l$ as the geometric mean of (i) the fraction of nodes in $CC_l$, $|V_l|/|V_1|$, and (ii) the fraction of edges in $CC_l$, $|E_l|/\min(|E_1|,|\Eb_a|)$~(Kuchaiev et al., 2010; more detail in Saraph and Milenkovi\'{c}, 2013).
 
-To assess {\it biological quality}, we measure common Gene Ontology (GO) terms~\citep{GOterms}. More precisely, we are interested in the fraction of aligned proteins sharing at least $k$ GO terms, for $k=1\ldots 9$. We denote this measure $\mbox{GO}_k$. Although ostensibly more sophisticated measures using GO terms exist, none has yet become dominant and we believe this simple, easy-to-interpret GO-based measure is the best available at the moment.
+To assess {\it biological quality}, we measure common Gene Ontology (GO) terms~\citep{GOterms}. More precisely, we are interested in the fraction of aligned proteins sharing at least $k$ GO terms, for $k=1\ldots 9$. We denote this measure $\mbox{GO}_k$. Although ostensibly more sophisticated measures using GO terms exist, none has yet become dominant and we believe this simple, easy-to-interpret GO-based measure is the one of the best available at the moment.
 
 \subsection{Datasets}\label{datadescription}
 
