paper: explained the change and swap neighbors in the main text

--- a/doc/sanaPaper/sana.tex
+++ b/doc/sanaPaper/sana.tex
@@ -151,7 +151,7 @@ The basic scheme of SANA is shown in Algorithm~\ref{alg:SANA}. The input consist
 
 An important element of simulated annealing is the \textit{temperature schedule}, which determines the decline of the probability to accept a worse solution as the algorithm advances. The \textit{temperature} $T(i)$ is a control parameter which depends on the current iteration $i$. It is commonly defined as $T(i)=k\cdot e^{-\lambda\cdot i}$, where $k$ and $\lambda$ are empirically determined constants greater than zero~\citep{SA1}. The temperature is at its highest point at iteration 0 where $T(0)=k$, and approaches 0 asymptotically. The constant $\lambda$ determines how fast the temperature approaches 0.
 
-Figure~\ref{fig:operators} illustrates the neighbors of an alignment. We define two types, \textit{change} and \textit{swap} neighbors. Together, they allow SANA to explore the solution space completely: through a sequence of neighbors, it is possible to go from any alignment to any other alignment. In SANA when a random neighbor is generated (line 3 of Algorithm~\ref{alg:SANA}) the probability of choosing each type of neighbor is proportional to its \textit{branching factor}, i.e., the number of different neighbors of $a$ of that type. This way, all neighbors are equally likely.
+We define two types of neighbors among alignments: \textit{change} and \textit{swap} neighbors (see Figure~\ref{fig:operators}). Change neighbors differ only in one mapping, which has the same origin in $G_1$ but different destinations in $G_2$. Swap neighbors differ in exactly two mappings, which have the same sources but their images are exchanged. Together, the two types of neighbors allow SANA to explore the solution space completely: through a sequence of neighbors, it is possible to go from any alignment to any other alignment. In SANA when a random neighbor is generated (line 3 of Algorithm~\ref{alg:SANA}) the probability of choosing each type of neighbor is proportional to its \textit{branching factor}, i.e., the number of different neighbors of $a$ of that type. This way, all neighbors are equally likely.
 
 In the algorithm, $\Delta E$ denotes the energy increment between the new and the current solution. The probability to accept a worse solution is $P(\Delta E, T(i)) = e^{\Delta E/T(i)}$. This probability decreases when the difference between $f(a)$ and $f(a')$ increases, and it also decreases as the temperature decreases.
 %We implement the fact that the neighbor is accepted with probability $P(\Delta E, T(i))$ by comparing this value with a uniformly distributed pseudorandom number in the range $(0,1)$ (represented by $\mbox{random}(0,1)$ in Algorithm~\ref{alg:SANA}) and only accepting the new solution if $P(\Delta E, T(i))$ is higher.
