--- a/doc/Bibliography.bib
+++ b/doc/Bibliography.bib
@@ -814,3 +814,54 @@ pages = {1030--1037},
 keywords = {gene prioritization, gene–disease associations, protein–disease associations, protein function prediction},
 year = {2008},
 }
+
+
+@article{Tabu1,
+author = {Fred Glover},
+title = {Tabu Search—Part I},
+journal = {ORSA Journal on Computing},
+volume = {1},
+number = {3},
+pages = {190-206},
+year = {1989},
+doi = {10.1287/ijoc.1.3.190},
+
+URL = { 
+        http://dx.doi.org/10.1287/ijoc.1.3.190
+    
+},
+eprint = { 
+        http://dx.doi.org/10.1287/ijoc.1.3.190
+    
+}
+
+}
+
+
+
+
+
+
+
+@article{Tabu2,
+author = {Fred Glover},
+title = {Tabu Search—Part II},
+journal = {ORSA Journal on Computing},
+volume = {2},
+number = {1},
+pages = {4-32},
+year = {1990},
+doi = {10.1287/ijoc.2.1.4},
+
+URL = { 
+        http://dx.doi.org/10.1287/ijoc.2.1.4
+    
+},
+eprint = { 
+        http://dx.doi.org/10.1287/ijoc.2.1.4
+    
+}
+
+}
+
+
