new figures in paper

--- a/doc/Bibliography.bib
+++ b/doc/Bibliography.bib
@@ -864,3 +864,17 @@ eprint = {
 
 }
 
+
+@article{PISwap,
+author = {Chindelevitch, Leonid and Ma, Cheng-Yu and Liao, Chung-Shou and Berger, Bonnie}, 
+title = {Optimizing a global alignment of protein interaction networks},
+volume = {29}, 
+number = {21}, 
+pages = {2765-2773}, 
+year = {2013}, 
+doi = {10.1093/bioinformatics/btt486}, 
+abstract ={Motivation: The global alignment of protein interaction networks is a widely studied problem. It is an important first step in understanding the relationship between the proteins in different species and identifying functional orthologs. Furthermore, it can provide useful insights into the species’ evolution.Results: We propose a novel algorithm, PISwap, for optimizing global pairwise alignments of protein interaction networks, based on a local optimization heuristic that has previously demonstrated its effectiveness for a variety of other intractable problems. PISwap can begin with different types of network alignment approaches and then iteratively adjust the initial alignments by incorporating network topology information, trading it off for sequence information. In practice, our algorithm efficiently refines other well-studied alignment techniques with almost no additional time cost. We also show the robustness of the algorithm to noise in protein interaction data. In addition, the flexible nature of this algorithm makes it suitable for different applications of network alignment. This algorithm can yield interesting insights into the evolutionary dynamics of related species.Availability: Our software is freely available for non-commercial purposes from our Web site, http://piswap.csail.mit.edu/.Contact: bab@csail.mit.edu or csliao@ie.nthu.edu.twSupplementary information: Supplementary data are available at Bioinformatics online.}, 
+URL = {http://bioinformatics.oxfordjournals.org/content/29/21/2765.abstract}, 
+eprint = {http://bioinformatics.oxfordjournals.org/content/29/21/2765.full.pdf+html}, 
+journal = {Bioinformatics} 
+}
